git/K8S/ingress new/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  selector:
    app: blue
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  selector:
    app: green
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orange-svc
spec:
  selector:
    app: orange
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: red-svc
spec:
  selector:
    app: red
  ports:
    - protocol: TCP
      port: 80
